force-app/main/default/objects/LMS_Setting__mdt/LMS_Setting__mdt.object-meta.xml
<CustomObject>
    <description>LMS Setting</description>
    <label>LMS Setting</label>
    <pluralLabel>LMS Setting</pluralLabel>
</CustomObject>