force-app/main/default/objects/LMS_Setting__mdt/fields/LMS_Email__c.field-meta.xml
<CustomField>
    <fullName>LMS_Email__c</fullName>
    <label>LMS Email</label>
    <type>Email</type>
</CustomField>