force-app/main/default/objects/LMS_Setting__mdt/fields/LMS_Value__c.field-meta.xml
<CustomField>
    <fullName>LMS_Value__c</fullName>
    <label>LMS Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>