force-app/main/default/objects/LMS_Setting__mdt/fields/Send_LMS_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_LMS_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send LMS Email</label>
    <type>Checkbox</type>
</CustomField>